<resources>
    <string name="app_name">NeWork</string>
    <string name="retry">Повторить</string>
    <string name="delete">delete</string>
    <string name="enter_your_name">Введите Ваше имя</string>
    <string name="enter_your_login">Введите логин</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="create_account"><u>Если у Вас еще нет аккаунта нажмите чтобы создать</u></string>
    <string name="error_connection">Ошибка соединения</string>
    <string name="error_network_connection">Отсутствует подключение к интернету</string>
    <string name="error_server_connection">Внутренняя ошибка сервера. Повторите запрос позже</string>
    <string name="error_incorrect_password">Неверный логин или пароль. Проверьте правильность ввода</string>
    <string name="error_input">Поле для ввода не может быть пустым</string>
    <string name="understand">Понятно</string>
    <string name="error_account_already_exist">Аккаунт уже существует, используйте другой логин для регистрации</string>
    <string name="error_password_mismatch">Введенные Вами пароли не совпадают</string>
    <string name="error_load_image">При загрузке картинки произошла ошибка</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="main">Главная</string>
    <string name="events">События</string>
    <string name="create">Создать</string>
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="no_job">Не работает</string>
    <string name="choose_to_create">Выберите что вы хотите создать</string>
    <string name="post">Пост</string>
    <string name="event">Событие</string>
    <string name="no_user_data">Не удалось загрузить данные пользователя</string>
    <string name="post_success_saving">Пост успешно сохранен</string>
    <string name="event_success_saving">Событие успешно сохранен</string>
    <string name="to_post_list">К списку постов</string>
    <string name="create_another">Создать еще</string>
    <string name="error">Ошибка</string>
    <string name="choose_date">Выберите дату</string>
    <string name="date">%1$d.%2$d.%3$d</string>
    <string name="empty_post_content_error">Содержание поста не может быть пустым</string>
    <string name="empty_event_content_error">Содержание события не может быть пустым</string>
    <string name="empty_date_error">Не выбрана дата проведения события</string>
    <string name="event_data_time">Дата проведения: %1$s</string>
    <string name="choose_event_type">Выберите тип</string>
    <string name="to_posts">Постов</string>
    <string name="to_events">Событий</string>
    <string name="change_job">Изменить</string>
    <string name="work_range">%1$s - %2$s</string>
    <string name="add">Добавить</string>
    <string name="unfortunately_load_job">Не удалось загрузить данные о работе</string>
    <string name="present">По настоящее время</string>
    <string name="absence_job_data">Отсутствуют данные о работе</string>
    <string name="logout_confirm">Вы действительно хотите выйти?</string>
    <string name="delete_job_confirm">Вы действительно хотите удалить эту позицию из списка?</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="enter_company_name">Введите название компании</string>
    <string name="enter_your_position">Введите Вашу должность</string>
    <string name="date_start_work">Дата начала</string>
    <string name="date_finish_work">Дата окончания</string>
    <string name="current_work">Работаю по настоящее время</string>
    <string name="save">Сохранить</string>
    <string name="set">Установить</string>
    <string name="error_job_finished">Не задано поле даты окончания работы, либо отметьте галочкой, что вы в данный момент работаете на этой позиции</string>
    <string name="error_wrong_date_range">Не правильный формат выбора даты, дата начала работы, должна быть раньше чем дата окончания</string>
    <string name="in_map">На карте</string>
    <string name="coordinate_geo">geo:%1$s,%2$s</string>
    <string name="absence_app">Отсутствует приложение для открытия карт</string>
</resources>