<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.presentation.add_job.AddJobFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/RoundedInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_company_name"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_position"
            style="@style/RoundedInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_your_position"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_is_current_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/current_work"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_start_work"
            app:boxBackgroundColor="@color/white"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="none"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_finish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_finish_work"
            app:boxBackgroundColor="@color/white"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_finish_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ru.netology.nework.core.presentation.view.ThreeStateView
        android:id="@+id/three_state_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>