<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.presentation.registration.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:elevation="8dp"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Avatar"
                    tools:srcCompat="@drawable/ic_add_avatar"
                    app:strokeWidth="2dp" />

                <ImageButton
                    android:id="@+id/iv_delete_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/delete"
                    android:padding="12dp"
                    android:src="@drawable/shape_oval_button_dark_bg"
                    android:translationZ="10dp"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/RoundedInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_name"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login"
                style="@style/RoundedInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_login"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/RoundedInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_repeat_password"
                style="@style/RoundedInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/repeat_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_bg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <ru.netology.nework.core.presentation.view.ThreeStateView
        android:id="@+id/three_state_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>